TP5: Better naming for some methods (remove obvious parts of the names) New endpoint /public/todolist/{todoListId}/addtodo/{todoId} to demonstrate how to use path variable to provide ids (instead of using a dedicated DTO).
